...
    <string name="genero_seta">Género seta:</string>
    <string name="comestibilidad_seta">Comestibilidad seta:</string>
    <string name="enlace_seta">Enlace seta:</string>

    <!--7-Cadenas de los elementos de la actividad elegir claves-->
    <string name="seleccionar_generos">Los siguientes géneros se encuentran en la clave dicotómica. Seleccione los géneros sobre los que aplicar la clave dicotómica:</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="boton_clave">Ir clave dicotómica</string>

    <!--8-Cadenas de los elementos de la actividad MostrarComparativa -->
    <string name="texto_comparativa">Comparativa entre las imágenes:</string>

    <!-- Elementos del menú -->
    <string name="titulo_menu_1">Herramientas</string>
...
    <string name="clasificar">Clasificar</string>
    <string name="claves">Ir claves dicotómicas</string>
    <string name="informacion">Información setas</string>
    <string name="titulo_menu_2">Opciones</string>
    <string name="idioma">Cambiar idioma</string>
    <string name="ayuda_menu">Ayuda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Ayuda</string>

    <!--0-Cadenas de los elementos de la ayuda de lanzadora-->
    <string name="ayuda_lanzadora_0">Ayuda de la actividad principal:</string>
    <string name="ayuda_lanzadora_1">Para clasificar una foto pulse sobre el icono de la lupa.</string>
...
        <item>Xylaria polymorpha</item>
    </string-array>

    <!--Nombres de las claves-->

    <string-array name="nombres_claves">
        <item>general</item>
        <item>agaricus</item>
        <item>agrocybe</item>
        <item>amanita</item>
        <item>armillaria</item>
        <item>boletopsis</item>
        <item>boletus</item>
...
